syntax = "proto3";

package ltpserver;

message Empty {}

// Health check per docs at
// https://github.com/grpc/grpc/blob/master/doc/health-checking.md

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}

service Health {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

// Main server definition
message VersionResponse {
    string VersionString = 1;
}

service Server {
    rpc GetVersion(Empty) returns (VersionResponse);
}
